--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 altair==5.2.0
 attrs==23.2.0
+bcrypt==4.1.2
 beautifulsoup4==4.12.3
 blinker==1.7.0
 cachetools==5.3.2
@@ -11,13 +12,17 @@ cycler==0.12.1
 decorator==5.1.1
 duckdb==0.9.2
 entrypoints==0.4
+et-xmlfile==1.1.0
+extra-streamlit-components==0.1.60
 Faker==22.4.0
 favicon==0.7.0
 fonttools==4.47.2
 gitdb==4.0.11
 GitPython==3.1.41
 google-api-core==2.15.0
-google-auth==2.26.2
+google-api-python-client==2.119.0
+google-auth==2.28.1
+google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.0
 google-cloud-bigquery==3.16.0
 google-cloud-core==2.4.1
@@ -29,8 +34,10 @@ gspread-dataframe==3.3.1
 gspread-formatting==1.1.2
 gspread-pandas==3.2.3
 htbuilder==0.6.2
+httplib2==0.22.0
 idna==3.6
 importlib-metadata==7.0.1
+importlib_resources==6.1.2
 Jinja2==3.1.3
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
@@ -45,6 +52,7 @@ mdurl==0.1.2
 more-itertools==10.2.0
 numpy==1.26.3
 oauthlib==3.2.2
+openpyxl==3.1.2
 packaging==23.2
 pandas==1.5.3
 pillow==10.2.0
@@ -54,6 +62,7 @@ pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pydeck==0.8.1b0
 Pygments==2.17.2
+PyJWT==2.8.0
 pymdown-extensions==10.7
 pyparsing==3.1.1
 python-dateutil==2.8.2
@@ -73,6 +82,7 @@ sqlparse==0.4.4
 st-annotated-text==4.0.1
 st-gsheets-connection==0.0.3
 streamlit==1.30.0
+streamlit-authenticator==0.3.1
 streamlit-camera-input-live==0.2.0
 streamlit-card==1.0.0
 streamlit-embedcode==0.1.2
@@ -88,6 +98,7 @@ toolz==0.12.0
 tornado==6.4
 typing_extensions==4.9.0
 tzlocal==5.2
+uritemplate==4.1.1
 urllib3==2.1.0
 validators==0.22.0
 watchdog==3.0.0
